Do not usage deprecated URL constructor any more
Keep it in the test code until we know, everything still works.

Signed-off-by: Sven Strickroth <email@cs-ware.de>